tests/init-global/neg/global-irrelevance1.scala
object A:
  var x = 6

object B:
  var y = A.x * 2 
// nopos-error: No warnings can be incurred under -Werror.